fix(style): components alignment

--- a/projects/host/src/styles.scss
+++ b/projects/host/src/styles.scss
@@ -22,7 +22,7 @@
 body {
   position: relative;
   margin: var(--header-height) 0 0 0;
-  padding: 0 1rem;
+  padding: 1rem;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   transition: 0.5s;
@@ -40,8 +40,8 @@ a {
 }
 @media screen and (min-width: 768px) {
   body {
-    margin: calc(var(--header-height) + 1rem) 0 0 0;
-    padding-left: calc(var(--nav-width) + 2rem);
+    margin: calc(var(--header-height) + 2rem) 0 0 0;
+    padding-left: calc(var(--nav-width) + 1rem);
   }
   .l-navbar {
     left: 0;
@@ -51,6 +51,6 @@ a {
     width: calc(var(--nav-width) + 156px);
   }
   .body-pd {
-    padding-left: calc(var(--nav-width) + 188px);
+    padding-left: calc(var(--nav-width) + 170);
   }
 }
